fix: adding support for center aligning h6 (#376)

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -318,6 +318,15 @@ body.article main .section h1 {
   margin: 0;
 }
 
+body.article main .section.abstract h6 {
+  text-align: center;
+  font-family: var(--header-font-family-regular);
+  font-weight: 100;
+  font-size: 1rem;
+  line-height: 1.6em;
+  margin: 20px 0;
+}
+
 body.article main .section .article-end-divider {
   display: inline-block;
   width: 100%;
